--- a/css/style.css
+++ b/css/style.css
@@ -640,7 +640,9 @@ img{
 
 /* about section */
 .about-section{
-    padding: 80px 0 80px;
+    display: flex;
+    align-items: center;
+    padding: 80px 0;
     min-height: 100vh;
 }
 
@@ -655,6 +657,7 @@ img{
     border-radius: 5px;
     padding: 15px;
 }
+
 .about-section .about-img .img-box img{
     width: 100%;
     border: 10px solid transparent;
@@ -895,6 +898,24 @@ img{
     line-height: 26px;
     margin: 15px 0 0;
 }
+
+.rowskills {
+    display: flex;
+    gap: 20px; /* Adjust the gap between icons */
+    margin: 0; /* Remove default margin */
+    padding: 0 20px;
+}
+
+.rowskills a {
+    text-decoration: none;
+}
+
+  /* Increase the size of icons */
+.rowskills img {
+    width: 60px;
+    height: 60px;
+}
+
 /* last  */
 
 /***** service-section *****/
